# nagyhazi

./: CMakeLists.txt  gui.c  gui.h  io.c  io.h  linkedlist.c  linkedlist.h  main.c  menu.c  menu.h  menu.txt  order.c  order.h  table.c  table.h
